CNTRL-2514: fixed gap height

--- a/src/Components/Form/Form.module.scss
+++ b/src/Components/Form/Form.module.scss
@@ -156,6 +156,7 @@
 
 .gapSpacer {
   flex: 0 0 auto;
+  align-self: stretch;
 }
 
 .fieldsGapSpacer {
